# backend/app.js
@@ -3,20 +3,22 @@ const express = require("express");
 const errorMiddleware = require("./middleware/errorMiddleware");
 
 const userRoutes = require("./routes/userRoutes");
-const casaRoutes = require("./routes/casaRoutes");
+const houseRoutes = require("./routes/houseRoutes");
 const xecretoRoutes = require("./routes/xecretoRoutes");
 const xelfieRoutes = require("./routes/xelfieRoutes");
 const xperienciaRoutes = require("./routes/xperienciaRoutes");
+const eventRouter = require("./routes/eventRoutes");
 
 const app = express();
 
 app.use(express.json());
 
-app.use("/user", userRoutes);
-app.use(["/casa", "/casas"], casaRoutes);
-app.use(["/xecreto", "/xecretos"], xecretoRoutes);
-app.use(["/xelfie", "/xelfies"], xelfieRoutes);
-app.use(["/xperiencia", "/xperiencias"], xperienciaRoutes);
+app.use(userRoutes);
+app.use(houseRoutes);
+app.use(xecretoRoutes);
+app.use(xelfieRoutes);
+app.use(xperienciaRoutes);
+app.use(eventRouter);
 
 app.use(errorMiddleware);
 
