# backend/controllers/xelfieController.js
@@ -1,31 +1,39 @@
-const xelfieService = require("../services/xelfieService");
+const activityService = require("../services/activityService");
 
-exports.getXelfie = async (req, res) => {
-  const id = req.params.id;
-  const xelfie = await xelfieService.getXelfieById(id);
+exports.createXelfie = async (req, res) => {
+  const { name, description, location, isActive, isFamiliar, minAge, maxAge } =
+    req.body;
+
+  const xelfie = await activityService.createActivity({
+    name,
+    description,
+    location,
+    type: "Xecreto",
+    isActive,
+    isFamiliar,
+    minAge,
+    maxAge,
+  });
 
   res.json({
-    xelfie: {
-      name: xelfie.name,
-      description: xelfie.description,
-      familiar: xelfie.familiar,
-      min_age: xelfie.min_age,
-      max_age: xelfie.max_age,
-    },
+    xelfie,
   });
 };
 
-exports.getAllXelfies = async (req, res) => {
-  const xelfies = await xelfieService.getAllXelfies();
+exports.getXelfie = async (req, res) => {
+  const id = req.params.id;
+
+  const xelfie = await activityService.getActivity(id);
+
   res.json({
-    xelfies: xelfies.map((xelfie) => xelfie.id),
+    xelfie,
   });
 };
 
 exports.deleteXelfie = async (req, res) => {
   const id = req.params.id;
 
-  await xelfieService.deleteXelfie(id);
+  await activityService.deleteActivity(id);
 
   res.json({
     xelfie: {
@@ -34,21 +42,68 @@ exports.deleteXelfie = async (req, res) => {
   });
 };
 
-exports.addXelfie = async (req, res) => {
-  const { name, description, familiar, min_age, max_age, casa_id } = req.body;
+exports.updateXelfie = async (req, res) => {
+  const id = req.params.id;
+  const newXecretoData = req.body;
 
-  const xelfie = await casaService.addXelfie(
-    casa_id,
-    name,
-    description,
-    familiar,
-    min_age,
-    max_age
-  );
+  await activityService.updateActivity(id, newXecretoData);
 
   res.json({
-    xelfie: {
-      id: xelfie.id,
-    },
+    xelfie: { id },
   });
 };
+
+// const xelfieService = require("../services/xelfieService");
+
+// exports.getXelfie = async (req, res) => {
+//   const id = req.params.id;
+//   const xelfie = await xelfieService.getXelfieById(id);
+
+//   res.json({
+//     xelfie: {
+//       name: xelfie.name,
+//       description: xelfie.description,
+//       familiar: xelfie.familiar,
+//       min_age: xelfie.min_age,
+//       max_age: xelfie.max_age,
+//     },
+//   });
+// };
+
+// exports.getAllXelfies = async (req, res) => {
+//   const xelfies = await xelfieService.getAllXelfies();
+//   res.json({
+//     xelfies: xelfies.map((xelfie) => xelfie.id),
+//   });
+// };
+
+// exports.deleteXelfie = async (req, res) => {
+//   const id = req.params.id;
+
+//   await xelfieService.deleteXelfie(id);
+
+//   res.json({
+//     xelfie: {
+//       id,
+//     },
+//   });
+// };
+
+// exports.addXelfie = async (req, res) => {
+//   const { name, description, familiar, min_age, max_age, casa_id } = req.body;
+
+//   const xelfie = await casaService.addXelfie(
+//     casa_id,
+//     name,
+//     description,
+//     familiar,
+//     min_age,
+//     max_age
+//   );
+
+//   res.json({
+//     xelfie: {
+//       id: xelfie.id,
+//     },
+//   });
+// };
